# nexus-git

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE_NOTES.md  angular.json  package-lock.json  package.json
scripts/: build-portable.js
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: auth.rs  mod.rs  storage.rs  sync.rs  updater.rs
src-tauri/src/gitlab/: mod.rs
src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
src/app/core/: app-state.service.spec.ts  app-state.service.ts  auth.guard.ts  auto-check.service.ts  auto-publish.service.ts  config.service.ts  diff-utils.spec.ts  diff-utils.ts  notification.service.ts  session.store.ts  sync.store.ts  tauri-bridge.service.ts  update-check.service.ts  wiki-constants.ts  wiki-format.spec.ts  wiki-format.ts
src/app/features/auth/: auth.component.html  auth.component.ts
src/app/features/config/: config.component.html  config.component.ts
src/app/features/dashboard/: dashboard.component.html  dashboard.component.ts
src/app/features/errors/: errors.component.html  errors.component.ts
src/app/features/link/: link.component.html  link.component.ts
src/app/features/publish/: publish.component.html  publish.component.ts
src/app/features/shared/: project-switcher.component.ts  toast.component.ts
src/app/features/shell/: shell.component.html  shell.component.ts
src/app/features/sync/: sync.component.html  sync.component.ts
src/app/models/: index.ts
